--- a/gb/19/12/13/n11720057.md
+++ b/gb/19/12/13/n11720057.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新州大龄产妇越来越多 剖腹产占三成以上</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年12月13日讯】（大纪元记者天睿澳洲悉尼编译报导）最新数据显示，三分之一以上的新州孕妇去年选择了<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">剖腹产</a>，自然生产率降至新低。新州卫生厅专家表示，这主要是因为产妇生孩子时的年龄越来越大，但产妇自己的选择和产科医生、助产士也在其中起了一定的作用。</p>
-<p>周五公布的新州母婴报告显示，2018年在新州出生的婴儿中，只有53.6%属于正常产道<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">分娩</a>，而2014年的比例为56.3%。<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">剖腹产</a>出生的婴儿比例从4年前的32.2%增至2018年的34.5%。</p>
-<p>在所有主要产科医院中，阿尔弗雷德王子医院（RPAH）的正常产道<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">分娩</a>率最低，只有46.7%，滨城-利德康姆（Bankstown-Lidcombe）医院的正常分娩率最高，为62.4%。</p>
-<p>在<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">公立医院</a>中，内皮恩医院（Nepean Hospital）的选择性剖腹产比例居于最高之列。圣乔治医院（St George Hospital）的选择性剖腹产比例最低，为16.1%，但紧急剖腹产比例最高，有15.4%。</p>
-<p>如果只统计<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">公立医院</a>的数据，正常产道分娩率则从2014年的62.4%降至了2018年的59%。</p>
+<p>【大纪元2019年12月13日讯】（大纪元记者天睿澳洲悉尼编译报导）最新数据显示，三分之一以上的新州孕妇去年选择了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">剖腹产</a>，自然生产率降至新低。新州卫生厅专家表示，这主要是因为产妇生孩子时的年龄越来越大，但产妇自己的选择和产科医生、助产士也在其中起了一定的作用。</p>
+<p>周五公布的新州母婴报告显示，2018年在新州出生的婴儿中，只有53.6%属于正常产道<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">分娩</a>，而2014年的比例为56.3%。<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">剖腹产</a>出生的婴儿比例从4年前的32.2%增至2018年的34.5%。</p>
+<p>在所有主要产科医院中，阿尔弗雷德王子医院（RPAH）的正常产道<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">分娩</a>率最低，只有46.7%，滨城-利德康姆（Bankstown-Lidcombe）医院的正常分娩率最高，为62.4%。</p>
+<p>在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">公立医院</a>中，内皮恩医院（Nepean Hospital）的选择性剖腹产比例居于最高之列。圣乔治医院（St George Hospital）的选择性剖腹产比例最低，为16.1%，但紧急剖腹产比例最高，有15.4%。</p>
+<p>如果只统计<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">公立医院</a>的数据，正常产道分娩率则从2014年的62.4%降至了2018年的59%。</p>
 <p>在新州，选择性剖腹产总比例为22.2%，其中私立医院占31.2%，公立医院17.8%。自然分娩的比例从2014年的50.8%降至2018年的44%。</p>
-<p>新州卫生厅资深<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E5%A6%87%E4%BA%A7%E7%A7%91.md#1">妇产科</a>顾问表示，剖腹产比例将会继续升高，这主要是因为越来越多的女性选择在年龄偏大的时候生孩子，但产妇自己的选择、产科医生和助产士可能在其中也起了一定的作用。</p>
+<p>新州卫生厅资深<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A6%87%E4%BA%A7%E7%A7%91.md#1">妇产科</a>顾问表示，剖腹产比例将会继续升高，这主要是因为越来越多的女性选择在年龄偏大的时候生孩子，但产妇自己的选择、产科医生和助产士可能在其中也起了一定的作用。</p>
 <p>北悉尼地方卫生局（LHD）辖区的高龄产妇最多，42%的产妇年龄在30岁到34之间；33.1%年龄介于35岁到39岁之间，还有8%在40岁以上。</p>
 <p>2018年，新州共有95,552名婴儿出生，比2014年减少了1.8%。</p>
 <p>责任编辑：岳明</p>
@@ -20,41 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/1/20/n10073667.md#1">堪培拉拓展产妇精神健康服务</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/23/n10995581.md#1">臀位分娩成失传手艺 维州产妇被迫剖腹产</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/2/18/n11053245.md#1">生产事故救济报告 产妇死因羊水栓塞最多</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/2/19/n11055702.md#1">高龄产妇风险高 适龄生育很重要</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/6/1/n11293713.md#1">首都产科床位紧张 产妇住院时间全澳最短</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/7/8/n11372575.md#1">安省拨款2,800万元 扩大产妇护理服务</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/9/16/n11524389.md#1">警局外产妇临盆 警官顺利接生男婴</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/10/1/n11559474.md#1">全球最高龄产妇生产 夫妻双双进加护病房</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/10/29/n11619757.md#1">温柔自然人性化生产 医护人员与产妇受惠</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/22/3/2/n13617382.md#1">2022布里斯本母婴展PBC Expo来啦</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/1/20/n10073667.md#1">堪培拉拓展产妇精神健康服务</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/23/n10995581.md#1">臀位分娩成失传手艺 维州产妇被迫剖腹产</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/18/n11053245.md#1">生产事故救济报告 产妇死因羊水栓塞最多</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/19/n11055702.md#1">高龄产妇风险高 适龄生育很重要</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/6/1/n11293713.md#1">首都产科床位紧张 产妇住院时间全澳最短</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/8/n11372575.md#1">安省拨款2,800万元 扩大产妇护理服务</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/9/16/n11524389.md#1">警局外产妇临盆 警官顺利接生男婴</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/1/n11559474.md#1">全球最高龄产妇生产 夫妻双双进加护病房</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/29/n11619757.md#1">温柔自然人性化生产 医护人员与产妇受惠</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753249.md#1">昆州医生自杀率超普通人一倍</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10771577.md#1" target="_blank">和平砥柱——丘吉尔的“铁幕”演说</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/13/n11720057.htm">新州大龄产妇越来越多 剖腹产占三成以上</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/13/n11720057.htm">新州大龄产妇越来越多 剖腹产占三成以上</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/19/12/13/n11720057.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/12/13/n11720057.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
